--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.34.1",
+    "tsparticles": "^1.34.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
